# llama-monitor

./: $null  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  package-lock.json  package.json
.github/: labeler.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  labeler.yml  release-please.yml  release.yml
docs/: 20260420-modern_ui_enhancements.md  20260420-progress-tracker.md  20260423-tool-call-blocked-state-detection.md  20260426-security_hardening.md  20260427-chat_enhancements.md  20260428-chat_ui_ux_improvements.md  20260429-app_update_capability.md  20260430-phase9_window_facade_cleanup.md  20260501-appjs_performance_optimization.md  20260502-context_window_for_chat.md  cross-compilation.md
docs/architecture/: 20260502-window_architecture_cleanup_plan.md  20260502-window_globals_inventory.md
llama-monitor/: Cargo.toml  README.md
llama-monitor/.github/: labeler.yml
llama-monitor/src/llama/: poller.rs
llama-monitor/tests/ui/: screenshot.mjs
scripts/: build-release-targets.sh  build-single-target.sh  release-preflight.sh  validate-js.sh
sensor_bridge/: Program.cs
src/: agent.rs  certs.rs  config.rs  lhm.rs  lhm_persistence.rs  lib.rs  main.rs  remote_ssh.rs  state.rs  system.rs  tray.rs
src/gpu/: apple.rs  env.rs
src/llama/: metrics.rs  poller.rs  server.rs
src/web/: api.rs  mod.rs  static_assets.rs  ws.rs
static/: app.js  compact.html  index.html  lhm.js  style.css
static/css/: agent-modal.css  base.css  cards-hardware.css  cards-inference.css  chat.css  components.css  layout.css  settings-modal.css  setup-view.css  tokens.css
static/js/: bootstrap.js
static/js/compat/: globals.js
static/js/core/: app-state.js  format.js  init-state.js
static/js/features/: animate.js  attach-detach.js  chat-params.js  chat-render.js  chat-state.js  lhm.js  (+19 more)
tests/integration/: capabilities.rs  chat-manual.sh
tests/ui/: capability-rendering.spec.js  capability-rendering.test.js  chat-ui.spec.js  gif.mjs  package.json  perf-baseline.spec.js  playwright.config.js  screenshot.mjs
