[package]
name = "llama-monitor"
version = "0.5.0"
edition = "2024"

[features]
default = ["tray-popover"]
tray-popover = ["dep:wry"]

[dependencies]
    anyhow = "1"
    bytes = "1"
    clap = { version = "4", features = ["derive"] }
    dirs = "6"
    futures-util = "0.3"
    reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json"] }
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    sysinfo = "0.38"
    tokio = { version = "1.51", features = ["full"] }
    warp = { version = "0.4", features = ["server", "websocket"] }
    notify-rust = "4"
    webbrowser = "1"
    tray-icon = "0.22"
    winit = { version = "0.30", default-features = false }
    core-foundation = "0.9"
    mac-notification-sys = "0.6"
    objc2-foundation = "0.2"

[target.'cfg(windows)'.dependencies]
    wmi = { version = "0.18.4", features = ["default"] }

[target.'cfg(target_os = "linux")'.dependencies]
    wry = { version = "0.48", optional = true, default-features = false, features = ["webkit2gtk"] }
